# ai-research-agent

./: Cargo.toml  LICENSE  README.md
src/: agent.rs  config.rs  main.rs  tools.rs
