[package]
name = "ai-research-agent"
version = "0.1.0"
edition = "2021"
description = "使用 Rig 框架构建的生产级 AI 研究代理"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
keywords = ["ai", "agent", "llm", "research", "rust"]
categories = ["command-line-utilities", "science"]

# 查看更多键及其定义：https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# =============================================================================
# RIG 框架 - 核心 AI 代理功能
# =============================================================================
# Rig 是一个用于构建 LLM 驱动的应用程序的 Rust 库。
# 我们启用 'ollama' 功能以通过 Ollama 使用本地模型。
# 了解更多：https://docs.rs/rig-core
rig-core = { version = "0.27", features = ["derive"] }

# =============================================================================
# 异步运行时 - Tokio 用于 async/await 支持
# =============================================================================
# Tokio 是 Rust 中最流行的异步运行时。
# 'full' 启用所有功能，包括：
# - rt-multi-thread：多线程运行时
# - macros：#[tokio::main] 属性宏
# - time：定时器和延迟（用于限速）
# - sync：同步原语
tokio = { version = "1", features = ["full"] }

# =============================================================================
# 序列化 - API 响应的 JSON 处理
# =============================================================================
# Serde 是 Rust 的事实标准序列化框架。
# 'derive' 功能启用 #[derive(Serialize, Deserialize)] 宏。
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# =============================================================================
# HTTP 客户端 - 用于网络搜索 API 调用
# =============================================================================
# Reqwest 是构建在 hyper 之上的高级 HTTP 客户端。
# 'json' 功能为请求/响应添加了方便的 .json() 方法。
reqwest = { version = "0.12", features = ["json"] }

# =============================================================================
# 网络搜索 - DuckDuckGo 集成（免费！）
# =============================================================================
# 使用 duckduckgo_search 进行免费网络搜索，无需 API 密钥。
duckduckgo_search = "0.1"

# =============================================================================
# 日志记录 - 使用 tracing 进行结构化日志
# =============================================================================
# Tracing 提供结构化的、异步感知的日志记录。
# 比生产应用程序中的 println! 好得多。
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# =============================================================================
# 错误处理 - 人体工程学的错误管理
# =============================================================================
# anyhow：用于带上下文的应用程序级错误
# thiserror：用于带派生宏的库级自定义错误类型
anyhow = "1"
thiserror = "2"

# =============================================================================
# CLI - 命令行参数解析
# =============================================================================
# Clap 的派生功能用于声明式 CLI 定义。
# 比手动解析参数干净得多！
clap = { version = "4", features = ["derive", "env"] }

# =============================================================================
# 配置 - 环境变量管理
# =============================================================================
# dotenvy 将 .env 文件加载到环境变量中。
# 非常适合本地开发，无需硬编码密钥。
dotenvy = "0.15"

# =============================================================================
# 工具库
# =============================================================================
# async-trait：trait 中异步函数所必需的（Rust 限制）
# futures：其他异步工具
# urlencoding：搜索查询的 URL 编码
async-trait = "0.1"
futures = "0.3"
urlencoding = "2.1"
